--- a/Software/Nucleo-F446RE-DDS/Nucleo-F446RE-DDS.ioc
+++ b/Software/Nucleo-F446RE-DDS/Nucleo-F446RE-DDS.ioc
@@ -10,8 +10,9 @@ Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
 Mcu.IP3=TIM1
-Mcu.IP4=USART2
-Mcu.IPNb=5
+Mcu.IP4=TIM6
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -21,6 +22,7 @@ Mcu.Pin11=PA13
 Mcu.Pin12=PA14
 Mcu.Pin13=PB3
 Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
@@ -29,7 +31,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA5
 Mcu.Pin8=PA8
 Mcu.Pin9=PA9
-Mcu.PinsNb=15
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -45,6 +47,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:false
+NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 PA10.Signal=S_TIM1_CH3
 PA13.GPIOParameters=GPIO_Label
@@ -192,10 +195,15 @@ TIM1.Prescaler=84-1
 TIM1.Pulse-PWM\ Generation1\ CH1=500
 TIM1.Pulse-PWM\ Generation2\ CH2=500
 TIM1.Pulse-PWM\ Generation3\ CH3=500
+TIM6.IPParameters=Prescaler,Period
+TIM6.Period=2000-1
+TIM6.Prescaler=84-1
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=NUCLEO-F446RE
 boardIOC=true
 isbadioc=false
